# AISecurityVision_byaugment

./: .augmentignore  .gitattributes  .gitignore  API_SYNC_FIX_SUMMARY.md  API_TESTING_SOLUTION_SUMMARY.md  CLEAN_STATE_GUIDE.md  CMakeLists.txt  DETECTION_BOX_FIX_SUMMARY.md  Dockerfile  Dockerfile.tensorrt  FINAL_SUCCESS_REPORT.md  GIT_COMMIT_SUMMARY.md  INSIGHTFACE_USAGE.md  LOGGER_REPLACEMENT_GUIDE.md  PERFORMANCE_FIX_SUMMARY.md  PERSON_STATS_FIX_SUMMARY.md  PERSON_STATS_IMPLEMENTATION.md  PERSON_STATS_IMPLEMENTATION_REPORT.md  QUICKSTART.md  README.md  RKNN_INTEGRATION_FINAL_REPORT.md  RKNN_INTEGRATION_SUMMARY.md  RTMP_IMPLEMENTATION_SUMMARY.md  TENSORRT_MODEL_CONVERSION_SUCCESS.md  add_camera.sh  add_four_cameras.sh  aibox.db  aibox.db.backup  api_test_report.html  api_test_report.md  api_test_summary_2025.md  architecture.md  basic-test.spec.js  build.sh  camera_dashboard.html  cleanup_system.sh  debug_frontend.html  demo_rknn_detection.py  detection_viewer.html  final_system_test.html  (+102 more)
backup_logger_20250528_143042/: main.cpp
config/: config_tensorrt.json  four_cameras.json  real_cameras.json  stress_test_8cameras.json  test_single_camera.json
docker/: docker-compose.yml  entrypoint.sh  healthcheck.sh
docs/: API_SYNC_FIX_REPORT.md  FINAL_SYSTEM_STATUS.md  GIT_COMMIT_SUMMARY.md  GPU_MONITORING_IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_FINAL_SUMMARY.md  PHASE_4_IMPLEMENTATION_PLAN.md  REAL_CAMERAS_SUCCESS_REPORT.md  REAL_CAMERA_TEST_REPORT.md  RKNN_SETUP_GUIDE.md  tasks.md  (+11 more)
tests/: CMakeLists.txt  README.md  build_and_test_insightface.sh  build_and_test_insightface_integration.sh  build_insightface_test.sh  debug_api_hang.cpp  debug_person_stats_config.py  insightface_simple_test.c  insightface_simple_test.cpp  minimal_api_test.cpp  person_stats_test.cpp  replace_std.txt  simple-api-test.spec.js  simple_person_stats_test.cpp  test_age_gender_simple.cpp  test_basic.cpp  test_cors_api.sh  test_frontend_config.html  test_insightface_integration.cpp  test_integrated_optimized.cpp  test_mjpeg_stream.cpp  test_optimized_cameras.cpp  test_optimized_performance.cpp  test_person_stats_persistence.py  test_rknn_performance_simple.py  test_simple_integrated.cpp  test_yolov8_backends.cpp  test_yolov8_performance.cpp  thread_safety_test.cpp  yolov8_inference_test.cpp
tests/cpp/: test_database.cpp  test_face_db_schema.cpp  test_face_verification_unit.cpp  test_gpu_monitoring.cpp  test_polygon_validation.cpp  test_polygon_validator_simple.cpp  test_real_cameras_ffmpeg.cpp  test_real_cameras_mjpeg.cpp  test_real_cameras_rknn.cpp  test_real_cameras_rknn_final.cpp  test_real_cameras_simple.cpp  test_rknn_integration.cpp  test_rknn_yolov8.cpp  test_rtsp_opencv.cpp  test_rule_api.cpp  test_task77_unit.cpp  test_task78_unit.cpp
tests/data/: test_roi.json
tests/data/test_results_task78/ground_truth/: transitions.csv
tests/docs/: FRONTEND_IMPLEMENTATION_REPORT.md  INSIGHTFACE_INSTALLATION_COMPLETE.md  prompts.md  test-results-summary.md
tests/html/: test_dashboard.html
tests/playwright/: README.md  api-consistency.spec.js  api-data-validation.spec.js  api_integration_test.py  global-setup.js  global-teardown.js  package-lock.json  package.json  playwright.config.js  run-tests.sh  test-summary.sh
tests/playwright/playwright-report/: index.html
tests/playwright/tests/playwright/reports/: test-summary.json
tests/playwright/tests/playwright/test-results/: .last-run.json
tests/playwright/tests/playwright/test-results/api-consistency-API-Endpoi-3956e-as---Add-Camera-Consistency-chromium/: error-context.md
tests/playwright/tests/playwright/test-results/api-consistency-API-Endpoi-3cc4d-nable---Enable-Person-Stats-chromium/: error-context.md
tests/playwright/tests/playwright/test-results/api-consistency-API-Endpoi-73630-cy-CORS-Headers-Consistency-chromium/: error-context.md
tests/playwright/tests/playwright/test-results/api-consistency-API-Endpoi-77dec-rors---Invalid-Request-Data-chromium/: error-context.md
tests/playwright/tests/playwright/test-results/api-consistency-API-Endpoi-c7130----Person-Stats-Consistency-chromium/: error-context.md
tests/playwright/tests/playwright/test-results/api-data-validation-API-Da-2aebd-m-status-response-structure-chromium/: error-context.md  video.webm
tests/playwright/tests/playwright/test-results/api-data-validation-API-Da-34ffb-on-error-format-consistency-chromium/: error-context.md  video.webm
tests/playwright/tests/playwright/test-results/api-data-validation-API-Da-7125b-amera-data-field-validation-chromium/: error-context.md  video.webm
tests/playwright/tests/playwright/test-results/api-data-validation-API-Da-9c921-ts-configuration-validation-chromium/: error-context.md  video.webm
tests/playwright/tests/playwright/test-results/api-data-validation-API-Da-a4137-response-format-consistency-chromium/: error-context.md  video.webm
tests/playwright/tests/playwright/test-results/api-data-validation-API-Da-ece38-on-stats-response-structure-chromium/: error-context.md  video.webm
tests/playwright/tests/playwright/test-results/api-data-validation-API-Da-fa0e2-bject-structure-consistency-chromium/: error-context.md  video.webm
tests/python/: convert_yolov8_to_rknn.py  mjpeg_server_8162.py  real_rtsp_camera_test.py  simple_convert.py  simulate_rtsp_with_rknn.py  test_ai_inference.py  test_alarm_server.py  test_debug_roi.py  test_enhanced_conflict_resolution.py  test_rknn_direct.py  test_roi_priority_validation.py
tests/scripts/: add_camera.sh  add_cameras_clean.sh  batch_replace_logger.sh  monitor_performance.sh  test_integration.sh  test_person_stats_api.sh
tests/sh/: test_camera_connectivity.sh
tests/shell/: build_and_test_rknn.sh  test_bbox_overlays.sh  test_enhanced_api.sh  test_face_manager_ui.sh  test_gpu_metrics_api.sh  test_mqtt_alarms.sh  test_onvif_auto_config.sh  test_onvif_discovery.sh  test_onvif_web_interface.sh  test_priority_conflict_resolution.sh  test_roi_drawing.sh  test_stream_health_monitoring.sh  test_streaming_api.sh  test_task78_multi_camera_sequences.sh  test_websocket_alarms.sh
(+222 files in other folders)
